--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,14 @@
 # Usa una imagen base ligera
 FROM python:3.12-slim
 
+# Instalar dependencias del sistema necesarias para Pillow
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    zlib1g-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Directorio de trabajo
 WORKDIR /app
 
