--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,11 @@ services:
   neo4j:
     image: neo4j:5.22.0
     container_name: catalogomapa-neo4j
-    env_file:
-      - .env
+    environment:
+      - NEO4J_AUTH=${NEO4J_AUTH}
+      - NEO4J_dbms_security_procedures_unrestricted=${NEO4J_dbms_security_procedures_unrestricted}
+      - NEO4J_apoc_import_file_enabled=${NEO4J_apoc_import_file_enabled}
+      - NEO4J_dbms_security_allow__csv__import__from__file__urls=${NEO4J_dbms_security_allow_csv_import_from_file_urls}
     ports:
       - "7475:7474"    # Browser UI
       - "7688:7687"    # Bolt
@@ -13,6 +16,11 @@ services:
       - ./neo4j/logs:/logs
       - ./neo4j/plugins:/var/lib/neo4j/plugins
       - ./neo4j/import:/var/lib/neo4j/import
+    healthcheck:
+      test: ["CMD", "cypher-shell", "-u", "${NEO4J_USER}", "-p", "${NEO4J_PASSWORD}", "RETURN 1;"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     build:
@@ -23,6 +31,9 @@ services:
       - .env
     environment:
       - NEO4J_HOSTNAME=neo4j
+      - NEO4J_URI=${NEO4J_URI}
+      - NEO4J_USER=${NEO4J_USER}
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
     ports:
       - "8002:8000"    # expone Django en localhost:8002
     volumes:
@@ -30,7 +41,8 @@ services:
       - "./imagenes:/imagenes" # la carpeta donde ya están todas las fotos de las piezas
       - "./2025 Inventario Colecciones MAPA-PCMAPA.xlsx:/app/inventario.xlsx" # el Excel montado dentro de /app con el nombre simplificado inventario.xlsx.
     depends_on:
-      - neo4j
+      neo4j:
+       condition: service_healthy
 
   frontend:
     build:
