feat: refactor import_mapa.py (neo4j import) and API to use direct Cypher, add APOC support to address nan values
Refactored the import_mapa management command to use direct Cypher queries and the official Neo4j driver, modularizing the import logic and improving image association. The API views were simplified to fetch data directly from Neo4j, removing Django ORM dependencies and related ViewSets. Router registrations for model-based ViewSets were commented out, and Neo4j APOC plugin support was added to docker-compose and the plugins directory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: catalogomapa-neo4j
     environment:
       - NEO4J_AUTH=${NEO4J_AUTH}
+      - NEO4JLABS_PLUGINS=["apoc"]  
       - NEO4J_dbms_security_procedures_unrestricted=${NEO4J_dbms_security_procedures_unrestricted}
       - NEO4J_apoc_import_file_enabled=${NEO4J_apoc_import_file_enabled}
       - NEO4J_dbms_security_allow__csv__import__from__file__urls=${NEO4J_dbms_security_allow_csv_import_from_file_urls}
